# django-compat-patcher

./: .appveyor.yml  .travis.yml  AUTHORS  CHANGELOG  CONTRIBUTE.rst  CONTRIBUTING  LICENSE  MANIFEST.in  README.in  README.md  README.rst  conftest.py  django_deprecation_timeline_notes.rst  generate_readme.py  pyproject.toml  pytest.ini  requirements-base.txt  requirements.txt  setup.cfg  setup.py  todo.txt  tox.ini
django_compat_patcher/: __init__.py  config.py  datastructures.py  default_settings.py  deprecation.py  import_proxifier.py  patcher.py  registry.py  request_payload.py  runner.py  utilities.py  utils.py
django_compat_patcher/fixers/: __init__.py  django16.py  django19.py  django1_10.py  django1_11.py  django1_6.py  django1_7.py  django1_8.py  django1_9.py  django2_0.py  django2_1.py
django_compat_patcher/tests/: test_django19_fixers.py
docs/: django_deprecation_timeline_notes.rst
src/: conftest.py
src/django_compat_patcher/: __init__.py  config.py  default_settings.py  deprecation.py  registry.py  runner.py  utilities.py
tests/: _test_utilities.py  check_behaviour_with_environment_variables.py  check_behaviour_with_minimal_settings.py  conftest.py  manage.py  test_django16_fixers.py  test_django19_fixers.py  test_django1_10_fixers.py  test_django1_11_fixers.py  test_django1_6_fixers.py  test_django1_8_fixers.py  test_django1_9_fixers.py  test_django2_0_fixers.py  test_django2_1_fixers.py  test_django2_2_fixers.py  test_django3_0_fixers.py  test_django3_1_fixers.py  test_django3_2_fixers.py  test_django4_0_fixers.py  test_django4_1_fixers.py  test_django5_1_fixers.py  test_patcher_scaffolding.py  test_patcher_utilities.py  test_scaffolding.py
tests/django_legacy/: test_django1_9.py
tests/test_project/: minimal_settings.py  models.py  urls.py  (+5 more)
(+48 files in other folders)
